Fixed orientation on mobile devices

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -24,5 +24,5 @@
 }
 
 .linkedin_post {
-  padding-top: 5px;
+  padding: 5px;
 }
