--- a/src/Components/UI/Button/Button.module.css
+++ b/src/Components/UI/Button/Button.module.css
@@ -1,6 +1,5 @@
 .button {
-  margin-top: 15px;
-  margin-right: 15px;
+  margin: 10px;
   font-size: 17px;
   padding: 10px 25px;
   color: #fff;
